--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -88,13 +88,18 @@
     display: none;
 }
 
+#logo-window {
+    position: fixed;
+    left: 100%;
+}
+
 /* Overlay */
 #screen-overlay {
     display: none;
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.222);
+    background-color: rgba(0, 0, 0, 0.733);
     z-index: 10;
 }
 
